kubernetes/apps/home/shelly-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shelly-operator
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "shelly.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shelly-operator
          port: 8090
